--- a/style.css
+++ b/style.css
@@ -24,9 +24,11 @@ button {
 }
 
 body {
-  background-image: url(./images/preview.gif);
-  /* background-repeat: no-repeat; */
-  background-size: 33.3%;
+  background-image: url(./images/bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: 100%;
+  /* background-size: 33.3%; */
   /* background-position: center center; */
   /* background-color: blue; */
 }
