--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ main{
 .logo {
   width: 100px;
   height: 100px;
-  background-color:orange;
+  background-color:rgba(86, 170, 209, 0.836);
   border-radius: 10px;
   text-align: center;
   line-height: 100px;
@@ -153,7 +153,7 @@ main{
   align-items: center;
   width: 100px;
   height: 100px;
-  background-color: orange;
+  background-color:rgba(86, 170, 209, 0.836);
   border-radius:10px;
   font-size: 60px;
 }
